k3s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bisa-backend-svc
  labels:
    app: bisa-backend
spec:
  type: ClusterIP
  selector:
    app: bisa-backend
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
